# Reach

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VAULT_IMPLEMENTATION_PLAN.md  package-lock.json  package.json
.github/workflows/: auto-release.yml  release.yml
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/styles/: custom.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/ansible/: mod.rs  project.rs  runner.rs  types.rs
src-tauri/src/ipc/: ansible_commands.rs  editor_commands.rs  mod.rs  session_commands.rs  tofu_commands.rs  toolchain_commands.rs
src-tauri/src/ssh/: client.rs
src-tauri/src/tofu/: backend_catalog.rs  catalog.rs  data_catalog.rs  graph.rs  hcl.rs  mod.rs  plan_parser.rs  project.rs  resource_catalog.rs  runner.rs  schema.rs  templates.rs  types.rs
src-tauri/src/toolchain/: detect.rs  install.rs
src-tauri/src/vault/: manager.rs
src/lib/components/ansible/: AnsibleAdHocPanel.svelte  AnsibleCollectionsPanel.svelte  AnsibleCommandOutput.svelte  AnsibleInventoryPanel.svelte  AnsiblePage.svelte  AnsiblePlaybookPanel.svelte  AnsibleProjectEditor.svelte  AnsibleProjectList.svelte  AnsibleRolesPanel.svelte  AnsibleToolchainSetup.svelte  AnsibleVaultPanel.svelte  AnsibleWorkspace.svelte
src/lib/components/editor/: EditorWindow.svelte
src/lib/components/explorer/: FileExplorer.svelte
src/lib/components/layout/: Sidebar.svelte  TabBar.svelte
src/lib/components/sessions/: SessionEditor.svelte  SessionList.svelte
src/lib/components/settings/: GeneralTab.svelte  PluginsTab.svelte  SyncTab.svelte
src/lib/components/setup/: CompleteStep.svelte  LanguageStep.svelte  TursoStep.svelte  WelcomeScreen.svelte
src/lib/components/terminal/: Terminal.svelte
src/lib/components/tofu/: TofuBackendPanel.svelte  TofuCommandOutput.svelte  TofuDataSourcePanel.svelte  TofuEnvironmentPanel.svelte  TofuGraphPanel.svelte  TofuHclPreview.svelte  (+22 more)
src/lib/ipc/: ansible.ts  sessions.ts  tofu.ts  toolchain.ts
src/lib/state/: ai-chat.svelte.ts  ansible.svelte.ts  editor.svelte.ts  navigation.svelte.ts  settings.svelte.ts  shortcuts.svelte.ts  tofu.svelte.ts
src/routes/: +layout.svelte  +page.svelte
(+16 files in other folders)
