[package]
name = "reach"
version = "0.3.0"
description = "Cross-platform SSH & Remote Management Tool"
authors = ["Reach Contributors"]
edition = "2021"
license = "LicenseRef-Reach-SAL"

[lib]
name = "reach_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# SSH
russh = { version = "0.46", default-features = false }
russh-keys = { version = "0.46", default-features = false }
async-trait = "0.1"
ssh2-config = "0.7"

# Encryption
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
secrecy = { version = "0.10", features = ["serde"] }

# Vault storage
libsql = "0.6"
dirs = "5"
sha2 = "0.10"
# Keychain/credential storage
# NOTE: Not available on Android - needs tauri-plugin-biometric for Android Keystore
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

# Toolchain detection & installation
which = "7"

# HTTP (AI API proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Regex (dependency graph)
regex = "1"

# Lua plugin engine
mlua = { version = "0.10", features = ["luau", "vendored", "async", "serialize", "send"] }
toml = "0.8"
tauri-plugin-process = "2.3.1"

# PTY, Serial, Autostart, Updater (desktop only)
[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"
serialport = "4"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
